--- a/ansible_chkrootkit.yaml
+++ b/ansible_chkrootkit.yaml
@@ -56,110 +56,10 @@
       mode=755
     tags: logfile 
 
-  - name: create chkrootkit log file 2
-    file:
-      path=/var/log/chkrootkit/chkrootkit.log
-      state=touch
-      owner=root
-      group=root
-      mode=755
-    tags: logfile
-
-  - name: Install EPEL 1
-    dnf:
-      name:
-       - epel-release 
-       - dnf-plugins-core
-      state: latest
-      disable_gpg_check: yes 
-    tags: install1
-
-  - name: Install EPEL 2
-    dnf:
-      name: 'http://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm'
-      state: present
-    tags: install1
-
-  - name: EPEL REPO SET1
-    copy:
-      src=epel-8/
-      dest=/etc/
-      backup=yes
-      force=yes
-    tags: configuration
-
-  - name: EPEL REPO SET2
-    shell: dnf config-manager --set-enabled powertools 
-    tags: configuration
-
-  - name: Install package make etc
-    dnf:
-      name:
-       - gcc
-       - gcc-c++
-       - make
-       - valgrind
-       - bzip2-devel
-       - check-devel
-       - json-c-devel
-       - libcurl-devel
-       - libxml2-devel
-       - ncurses-devel
-       - openssl-devel
-       - pcre2-devel
-       - sendmail-devel
-       - zlib-devel  
-       - autoconf
-       - automake
-       - libtool
-       - libtool-ltdl-devel
-       - perl
-    tags: install2
-
-  - name: download source code
-    get_url: url=https://www.clamav.net/downloads/production/clamav-{{clamav_version}}.tar.gz dest=/root
-    tags: download
-
-  - name: Unarchive go
-    unarchive:
-      src: /root/clamav-{{clamav_version}}.tar.gz
-      dest: /root 
-      copy: no
-    tags: download
-
-  - name: Build ClamAV 1 
-    shell: mkdir /root/clamav-{{clamav_version}}/build && cd /root/clamav-{{clamav_version}}/build && /root/clamav-{{clamav_version}}/autogen.sh && /root/clamav-{{clamav_version}}/configure --prefix=/usr --sysconfdir=/etc/clamav --with-dbdir=/var/lib/clamav --enable-milter
-    tags: build 
-
-
-  - name: Build ClamAV 2
-    make:
-      chdir: /root/clamav-{{clamav_version}}/build
-    tags: build
-
-  - name: Build ClamAV 3 
-    make:
-      chdir: /root/clamav-{{clamav_version}}/build
-      target: install 
-    become: yes
-    tags: build
-
-  - name: Config ClamAV 1
-    shell: cp -p /etc/freshclam.conf.sample /etc/freshclam.conf && cp -p /etc/clamav/clamd.conf.sample /etc/clamav/clamd.conf
-    tags: config
-
-  - name: Config ClamAV 2
-    shell: touch /var/log/freshclam.log && chmod 600 /var/log/freshclam.log && chown root /var/log/freshclam.log
-    tags: config
-
-  - name: freshclam set
-    shell: sed -e 's|^Example|#Example|g' -e 's|^#DatabaseDirectory|DatabaseDirectory|g'  -e 's|^#UpdateLogFile|UpdateLogFile|g'  -e 's|^#DatabaseOwner clamav|DatabaseOwner root|g'  -i.bak /etc/clamav/freshclam.conf
-    tags: freshclam_set
-
-  - name: freshclam
-    shell: /usr/bin/freshclam --quiet --no-warnings 
-    tags: freshclam
-
-  - name: clamd set
-    shell: sed -e 's|^#TCPAddr|TCPAddr|g' -e 's|^#TCPSocket|TCPSocket|g' -e 's|^Example|#Example|g' -i.bak /etc/clamav/clamd.conf 
-    tags: clmad_set
+  - name: create chkrootkit cron
+    cron:
+      hour=1
+      minute=30
+      weekday=1
+      job="sh /opt/chkrootkit-{{chkrootkit_version}}/scripts/chkrootkit_exec.sh"
+    tags: createcron
